# jAilbreak

./: .gitignore  cloudfront-config.json  deploy.sh  flake.nix  index.html  install-tools.sh  jb_api_uml_diagram.puml  jb_api_uml_readable.puml  package-lock.json  package.json  s3-bucket-policy.json  setup-prompts.js  setup.sh
backend/: Cargo.toml
backend/jb_api/: Cargo.toml
backend/jb_api/src/: auth.rs  lib.rs  macros.rs  response.rs
backend/jb_api/src/db/: counter.rs  level.rs  mod.rs  prompt.rs
backend/jb_api/src/routes/: mod.rs  prompt.rs
backend/jb_api/src/routes/level/: chat.rs  mod.rs
backend/jb_api/src/routes/levels/: admin.rs  chat.rs  mod.rs  validate.rs
backend/jb_authorizer/: Cargo.toml
backend/jb_authorizer/src/: main.rs
backend/jb_common/: Cargo.toml
backend/jb_common/src/: lib.rs
backend/src/: lib.rs
backend/src/routes/: mod.rs
backend/terraform/: .terraform.lock.hcl  main.tf
docs/: use-case-diagram-pretty.md  use-case-diagram.md
frontend/: .gitignore  cucumber.js  package-lock.json  package.json
frontend/features/: auth.feature  chat.feature  level-progression.feature  level-selection.feature  simple-test.feature  test.feature
frontend/features/steps/: main.js
frontend/features/support/: level-progression-steps.js  simple-steps.js  support.js  world.js
frontend/reports/: cucumber-report.html
frontend/src/: App.jsx  api.js  audio.js  aws-config.js  localStorage.js  main.jsx  matrix-effects.css  mobile-styles.css  nes-terminal-styles.css  retro-styles.css
frontend/src/api/: admin.js
frontend/src/components/: AdminAuth.jsx  Auth.jsx  BootSequence.jsx  Chat.jsx  MatrixEscape.jsx  MobileKeyboard.jsx  MobileMenu.jsx  ProgressBar.jsx  SoundVisualizer.jsx  TutorialPopup.jsx
frontend/src/components/admin/: LevelManager.jsx
frontend/src/pages/: About.jsx  Admin.jsx  AdminPanel.jsx  Contact.jsx  Home.jsx  Profile.jsx
frontend/terraform/: cognito.tf  dynamodb.tf  main.tf  variables.tf
src/: App.jsx  aws-config.js  main.jsx  retro-styles.css  styles.css
src/components/: Chat.jsx
terraform/: .gitignore  .terraform.lock.hcl  api_gateway.tf  api_lambda.tf  backend.tf  cloudfront.tf  cloudwatch_logs.tf  cognito.tf  dynamodb.tf  main.tf  outputs.tf  s3.tf
terraform/cf_functions/: api-strip-prefix.js  spa-redirect-index.js
