[workspace]
members = ["jb_api", "jb_authorizer", "jb_common"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }
lambda_runtime = { version = "0.14.4", default-features = false }
aws_lambda_events = { version = "0.18.0", default-features = false, features = ["apigw"] }
lambda_http = { version = "0.17.0", default-features = false, features = ["apigw_rest"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false }

serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", features = ["raw_value"] }

axum = { version = "0.8.4", default-features = false }
tower-http = { version = "0.6.6", features = ["normalize-path", "trace"] }

alcoholic_jwt = { version = "4091.0.0", default-features = false }
minreq = "2.14.1"

futures =  { version = "0.3.31", default-features = false, features = ["std"] }
anyhow = "1.0.100"
preinterpret = "0.2.0"

jb_common = { path = "./jb_common" }

[workspace.metadata.lambda.build]
bin = ["api", "jb_authorizer"]
output_format = "zip"

[workspace.metadata.lambda.deploy]
s3_bucket = "jb-lambda-code-archives"

[profile.dev]
opt-level = "z"
strip = true
