[workspace]
members = ["jb_api", "jb_authorizer", "jb_common"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["rt", "macros"] }
lambda_runtime = { version = "0.14.4", default-features = false }
aws_lambda_events = { version = "0.18.0", default-features = false, features = ["apigw"] }
lambda_http = { version = "0.17.0", default-features = false, features = ["apigw_rest"] }

aws-config = { version = "1.8.8", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-smithy-http-client = { version = "1.1.3", default-features = false, features = ["default-client", "rustls-ring"] }
aws-sdk-bedrockagentruntime = { version = "1.113.0", default-features = false }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", default-features = false }

serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", features = ["raw_value"] }

axum = { version = "0.8.4", default-features = false, features = ["macros", "json"] }
tower-http = { version = "0.6.6", features = ["normalize-path", "trace", "cors"] }

alcoholic_jwt = { version = "4091.0.0", default-features = false }
minreq = "2.14.1"

futures =  { version = "0.3.31", default-features = false, features = ["std"] }
anyhow = "1.0.100"
preinterpret = "0.2.0"
indoc = "2.0.6"

jb_common = { path = "./jb_common" }

[workspace.metadata.lambda.build]
bin = ["api", "jb_authorizer"]
output_format = "zip"

[workspace.metadata.lambda.deploy]
s3_bucket = "jb-lambda-code-archives"

[profile.dev]
opt-level = "z"
strip = true
