[workspace]
members = ["jb_api", "jb_authorizer", "jb_common"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.47", features = ["rt", "macros"] }
lambda_runtime = { version = "0.14", default-features = false }
aws_lambda_events = { version = "0.18", default-features = false, features = ["apigw"] }
lambda_http = { version = "0.17", default-features = false, features = ["apigw_rest"] }

aws-config = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-smithy-http-client = { version = "1", default-features = false, features = ["default-client", "rustls-ring"] }
aws-sdk-dynamodb = { version = "1", default-features = false }
aws-sdk-bedrockagentruntime = { version = "1", default-features = false }
aws-sdk-cognitoidentityprovider = { version = "1", default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false }

serde = { version = "1", default-features = false }
serde_json = { version = "1", features = ["raw_value"] }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }

axum = { version = "0.8", default-features = false, features = ["macros", "json"] }
tower-http = { version = "0.6", features = ["normalize-path", "trace"] }

alcoholic_jwt = { version = "4091", default-features = false }
minreq = "2"

futures =  { version = "0.3", default-features = false, features = ["std"] }
anyhow = "1"
preinterpret = "0.2"
indoc = "2"
itertools = "0.14.0"

jb_common = { path = "./jb_common" }

[workspace.metadata.lambda.build]
bin = ["api", "jb_authorizer"]
output_format = "zip"

[workspace.metadata.lambda.deploy]
s3_bucket = "jb-lambda-code-archives"

[workspace.metadata.lambda.watch]
bin = ["api"]
features = ["local-testing"]

[workspace.metadata.lambda.watch.env_var]
COGNITO_USER_POOL = "eu-central-1_Gz1bQbuzr"



[profile.dev]
opt-level = "z"
strip = true
